# Spacy-Integration-Tests

./: .travis.yml  CMakeLists.txt  README.md  project.config  run_test_in_docker.sh
Eigen/: linearSolver.cpp  util.cpp  vector.cpp  vectorCreator.cpp
FEniCS/: setup.hh  vectorCreator.cpp
Kaskade/: c1Operator.cpp  c2Functional.cpp  laplace.hh  linearOperator.cpp.disabled  linearOperatorCreator.cpp  linearSolver.cpp  test_functional.hh  vector.cpp  vectorCreator.cpp
dealII/: copy.cpp
